[project]
name = "smartorderingagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.2",
    "langchain>=1.2.8",
    "langchain-huggingface>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pip>=26.0.1",
    "pymilvus>=2.6.8",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sentence-transformers>=5.2.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
